emberMetrics/src/index.css
/* ... */
.device-data_list {
    font-size: var(--font-size);
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: var(--element-padding);
    align-items: center;
    margin: 0;
    padding: 0;
}

@media (max-width: 1100px) {
    .device-data_list {
        grid-template-columns: none;
        padding: 0;
    }
}

.device-data_list > li:last-child {
    grid-column: 1 / -1;
}


.device-data > ul > li {
    font-size: var(--font-size);
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    gap: 1rem;
    width: calc(100% - var(--element-padding));
}

.data-item-label {
    font-size: var(--font-size);
    font-weight: bold;
    border-right: 1px solid var(--border-color);
    min-width: 130px;
    color: var(--secondary);
    margin: 0;
    flex-shrink: 0;
}


.data-item-value {
    margin: 0;
    flex-shrink: 1;
    font-size: var(--font-size);
    padding-right: var(--element-padding);
    color: var(--text-primary);
    text-wrap: wrap;
    white-space: wrap;
    word-break: break-word;
}


@media (max-width: 400px) {
    .data-item-value {
        max-width: calc(160px - var(--element-padding));
    }
}

/* CPU Cores Styles */
.cpu-cores {
    display: flex;
    flex-direction: column;
    padding: var(--element-padding);
}

.cpu-cores__item {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 10px;
}

.cpu-usage-bar {
    height: 2px;
}

.cpu-cores__graph-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    justify-content: center;
    gap: 0;
    padding: 0;
}

@media (max-width: 1300px) {
    .cpu-cores__graph-container {
        grid-template-columns: repeat(2, 1fr);
        justify-content: center;
    }
}

@media (max-width: 900px) {
    .cpu-cores__graph-container {
        grid-template-columns: repeat(3, 1fr);
        justify-content: center;
    }
}

@media (max-width: 800px) {
    .cpu-cores__graph-container {
        grid-template-columns: repeat(2, 1fr);
        justify-content: center;
    }
}

@media (max-width: 500px) {
    .cpu-cores__graph-container {
        grid-template-columns: repeat(1, 1fr);
    }
}

.cpu-cores > ul {
    font-size: var(--font-size);
    font-weight: bold;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    min-width: 300px;
    padding: 0;
    margin: 0;
    gap: var(--element-padding);
}

.cpu-cores > ul > li {
    font-size: var(--font-size);
    background-color: var(--neutral);
    list-style: none;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    /*border-radius: 10px;*/
    padding: 1px;
}

.cpu-cores > ul > li > div > p {
    margin: 0;
}

/* Memory Info Styles */
.memory-info {
    display: flex;
    flex-direction: row;
    gap: 10px;
    width: 100%;
}

.memory-info__content {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: var(--neutral);
    border-radius: var(--border-radius);
    overflow: hidden;
}

.memory-bar {
    height: 6px;
    grid-column: 1 / -1;
}

.memory-info__content-title {
    font-weight: 700;
    font-size: 22px;
    text-align: center;
}

.memory-info__content-value {
    font-size: var(--font-size);
    font-weight: bold;
    color: var(--secondary);
}

/*settings*/
.settings-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}
.settings__container {
    padding: var(--element-padding);
    width: 100%;
    height: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.settings-header {
    width: 50%;
    align-self: flex-start;
    margin-left: 10%;
    padding: var(--element-padding);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    border-bottom: 1px solid var(--border-color);
}

.settings-header > h1 {
    margin: 0;
}

.settings {
    width: calc(100% - var(--section-padding));
    padding: var(--element-padding);
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: column;
    border-radius: var(--border-radius);
    background-color: var(--primary);
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.3);
}

.settings-entry {
    height: calc(80px - 1rem);
    width: 80%;
    max-width: 600px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: var(--element-padding);
    border-radius: var(--border-radius);
    transition: height 0.3s ease;
}

.settings-entry__label {
    font-weight: bold;
    display: flex;
    align-items: center;
    border-right: 2px solid var(--border-color);
    margin: 0 30px 10px 0;
    max-width: 100px;
    min-width: 130px;
    height: 2rem;
}

.settings-entry__value-container {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    gap: 1rem;
}

.settings-entry__value-container > input {
    outline: none;
    border: none;
    background: var(--neutral);
    border-radius: var(--border-radius);
    width: 100px;
    font-size: 30px;
    color: var(--accent);
    font-family: 'Inter', sans-serif;
    font-weight: 700;
    padding: var(--element-padding);
}

.settings-entry__value-container > p {
    font-size: 20px;
}

.settings-entry__button-container {
    display: flex;
    justify-content: center;
    gap: 20px;
    padding: var(--element-padding);
    border-radius: var(--border-radius);
    background-color: var(--neutral);
}
/* ... */

